--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ url: "" # the base hostname & protocol for your site
 500px_url:
 facebook_url: https://facebook.com/jprefer
 github_url: https://github.com/jprefer
-# gitlab_url: https://gitlab.com/u/andrewbanchich
-# googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
+# gitlab_url: https://gitlab.com/u/jprefer
+# googleplus_url: https://plus.google.com/u/0/+jprefer
 instagram_url: https://instagram.com/jprefer
 # linkedin_url: https://www.linkedin.com/in/jprefer
 # pinterest_url:
